Add favicon and modify add listing to add business

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,8 @@
 <link href="lib/swiper/css/swiper.min.css" rel="stylesheet">
 <link href="lib/aos/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="lib/photoswipe/photoswipe.css"> 
-<link rel="stylesheet" href="lib/photoswipe/default-skin/default-skin.css"> 
+<link rel="stylesheet" href="lib/photoswipe/default-skin/default-skin.css">
+<link rel="icon" href="img/favicon.png">
 <link href="lib/Magnific-Popup/magnific-popup.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 
@@ -126,7 +127,7 @@
     <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-10">
         <div class="heading">
-          <h2>Find your property</h2>
+          <h2>Find your Business</h2>
           <h3>We will help you to find the best property in any city in the world.</h3>
         </div>
         <form action="property_listing.html">
