--- a/src/main/resources/static/resources/pages/sell.html
+++ b/src/main/resources/static/resources/pages/sell.html
@@ -18,7 +18,7 @@
     <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-10 central-content">
         <div class="heading">
-          <h2>Find your property</h2>
+          <h2>Find your Business</h2>
           <h3>We will help you to find the best property in any city in the world.</h3>
         </div>
         <form action="property_listing.html">
@@ -272,14 +272,14 @@
                 <div class="swiper-slide">
                   <div class="item content-box centered">
                     <div class="image"> <img class="rounded-circle" src="http://via.placeholder.com/300x300" width="180" alt=""> </div>
-                    <h4>Thank you for your quick and clear responses. They are much appreciated. This was a site that needed to go up fast and it has – customizations and all!</h4>
+                    <h4>Thank you for your quick and clear responses. They are much appreciated. This was a site that needed to go up fast and it has ï¿½ customizations and all!</h4>
                     <div class="caption">The Brown Family</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="item content-box centered">
                     <div class="image"> <img class="rounded-circle" src="http://via.placeholder.com/150x150" width="180" alt="">
-                      <h4>Thank you for your quick and clear responses. They are much appreciated. This was a site that needed to go up fast and it has – customizations and all!</h4>
+                      <h4>Thank you for your quick and clear responses. They are much appreciated. This was a site that needed to go up fast and it has ï¿½ customizations and all!</h4>
                       <div class="caption">The Brown Family</div>
                     </div>
                   </div>
@@ -287,7 +287,7 @@
                 <div class="swiper-slide">
                   <div class="item content-box centered">
                     <div class="image"> <img class="rounded-circle" src="http://via.placeholder.com/150x150" width="180" alt="">
-                      <h4>Thank you for your quick and clear responses. They are much appreciated. This was a site that needed to go up fast and it has – customizations and all!</h4>
+                      <h4>Thank you for your quick and clear responses. They are much appreciated. This was a site that needed to go up fast and it has ï¿½ customizations and all!</h4>
                       <div class="caption">The Brown Family</div>
                     </div>
                   </div>
