--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -107,7 +107,7 @@
       <li class="nav-item" ng-if="!isAuthenticated">
       	<a class="nav-link nav-btn" ng-click="authService.login()">Log In</a>
       </li>
-      <li class="nav-item" ng-if="isAuthenticated"><a class="nav-link nav-btn" href="#property/addListing"><span><i class="fa fa-plus" aria-hidden="true"></i> Add listing</span></a></li>
+      <li class="nav-item" ng-if="isAuthenticated"><a class="nav-link nav-btn" href="#property/addListing"><span><i class="fa fa-plus" aria-hidden="true"></i> Add Business</span></a></li>
     </ul>
 
   </div>
