--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -18,7 +18,7 @@
     <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-10 central-content">
         <div class="heading">
-          <h2>Find your property</h2>
+          <h2>Find your Business</h2>
           <h3>We will help you to find the best property in any city in the world.</h3>
         </div>
         <form action="property_listing.html">
