--- a/src/main/resources/static/resources/pages/nav.html
+++ b/src/main/resources/static/resources/pages/nav.html
@@ -8,7 +8,7 @@
               <div class="sidebar_inner">
                 <div class="list-group no-border list-unstyled">
                   <span class="list-group-item heading">Manage Listings</span>
-                  <a ui-sref=".addListing" class="list-group-item"><i class="fa fa-fw fa-plus-square-o"></i> Add Listing</a>
+                  <a ui-sref=".addListing" class="list-group-item"><i class="fa fa-fw fa-plus-square-o"></i> Add Business</a>
                   <a ui-sref=".bookmarkedListing" class="list-group-item d-flex justify-content-between align-items-center"><span><i class="fa fa-fw fa-bookmark-o"></i> Bookmarked Listing</span>
                     <span class="badge badge-primary badge-pill">10</span>
                   </a>
