Clean up Added google analytics Removed unnecessary links Added new s3 credentials Contact US page (work in progress)

--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -68,15 +68,15 @@
             <a href="#" class="dropdown-item">Agents Alerts</a> -->
         </div>
       </li>
-      <li class="nav-item  dropdown">
-        <a class="nav-link  dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">
-          Estimators
-        </a>
-        <div class="dropdown-menu">
-            <a href="#" class="dropdown-item">BRW Estimator</a>
-            <a href="#" class="dropdown-item">BRW ROI Estimator</a>
-        </div>
-      </li>
+<!--      <li class="nav-item  dropdown">-->
+<!--        <a class="nav-link  dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">-->
+<!--          Estimators-->
+<!--        </a>-->
+<!--        <div class="dropdown-menu">-->
+<!--            <a href="#" class="dropdown-item">BRW Estimator</a>-->
+<!--            <a href="#" class="dropdown-item">BRW ROI Estimator</a>-->
+<!--        </div>-->
+<!--      </li>-->
 			<div class="nav-item" ng-if="isAuthenticated">
 	      <a class="nav-link" href="#search" role="button" aria-haspopup="true" aria-expanded="false">
 	        Claim a Business
