--- a/src/main/resources/static/resources/pages/propertyDetails.html
+++ b/src/main/resources/static/resources/pages/propertyDetails.html
@@ -198,8 +198,7 @@
         <div class="media">
           <div class="media-left"><img src="http://via.placeholder.com/440x310" width="60" class="img-rounded mt5" alt=""></div>
           <div class="media-body">
-            <h4 class="media-heading">Request details for 2 bed semi-detached bungalow for sale</h4>
-            Kents Lane, Bungay NR35 </div>
+            <h4 class="media-heading">Request details</h4></div>
         </div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
