--- a/src/main/resources/static/index-payment.html
+++ b/src/main/resources/static/index-payment.html
@@ -14,7 +14,7 @@ Welcome !!
 
 <script>
 var handler = StripeCheckout.configure({
-  key: 'pk_test_N8j70xGi1ZyWjbTc8G18ln7y',
+  key: 'pk_test_SoraMDggMhWzBF2FJyLCR63Q00nOjvqH15',
   image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
   locale: 'auto',
   token: function(token) {
@@ -26,10 +26,10 @@ var handler = StripeCheckout.configure({
 document.getElementById('customButton').addEventListener('click', function(e) {
   // Open Checkout with further options:
   handler.open({
-    name: 'Stripe.com',
-    description: '2 widgets',
+    name: 'BizRealWorth.com',
+    description: 'Test Payment',
     zipCode: true,
-    amount: 2000
+    amount: 100
   });
   e.preventDefault();
 });
