1. Home page updates with search api call 2. Contact us page update

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -162,7 +162,7 @@
               <li><a href="#">FAQs</a></li>
               <li><a href="#">Terms of Service</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="resources/pages/contactUs.html">Contact Us</a></li>
+              <li><a href="#contactUs">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-md-4 col-sm-12">
