UI update - home page changes with search api integration - details page changes with api integration(additional attribute and details in progress)

--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -26,26 +26,77 @@
         </div>
       </li> -->
 
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#search/Buy" role="button" aria-haspopup="true" aria-expanded="false">
-          Buy
-        </a>
-        <div class="dropdown-menu">
-            <a href="#postBuy" class="dropdown-item">Post Buy Requirement</a>
-            <a href="#search/Buy" class="dropdown-item">Buy a Business</a>
-            <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>
-        </div>
-      </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                Buyers
+            </a>
+            <div class="dropdown-menu">
+                <a href="#" class="dropdown-item">Search Business to Buy</a>
+                <a href="#postBuy" class="dropdown-item">Post Buy Requirements</a>
+                <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>
+                <a href="#" class="dropdown-item">Find the RealWorth of Business you thinking to Buy</a>
+                <a href="#searchAgents" class="dropdown-item">Find Brokers/Attorneys/Consultants/Advisors/Experts*</a>
+                <a href="#applyLoan" class="dropdown-item">Apply for Business Loan*</a>
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#search/sell" role="button" aria-haspopup="true" aria-expanded="false">
+                Sellers
+            </a>
+            <div class="dropdown-menu">
+                <a href="#" class="dropdown-item">Sell a business</a>
+                <a href="#businessSellGuidance" class="dropdown-item">Business Selling Guidance</a>
+                <a href="#search" class="dropdown-item">Find the RealWorth of your Business</a>
+                <a href="#searchAgents" class="dropdown-item">Find Business Brokers/Attorneys/Help to Sell</a>
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">
+                Owners
+            </a>
+            <div class="dropdown-menu">
+                <a href="#search" class="dropdown-item">Claim your Business</a>
+                <a href="#search" class="dropdown-item">How much is my Business RealWorth?</a>
+                <a href="#businessBuyGuidance" class="dropdown-item">How do I increase RealWorth of my business?</a>
+                <a href="#businessBuyGuidance" class="dropdown-item">My Business is in trouble!</a>
+                <a href="#businessBuyGuidance" class="dropdown-item">Not able to find your business??</a>
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#searchAgents" role="button" aria-haspopup="true" aria-expanded="false">
+                Business Service Providers
+            </a>
+            <div class="dropdown-menu">
+                <a href="#" class="dropdown-item">Brokers</a>
+                <a href="#" class="dropdown-item">Attorneys</a>
+                <a href="#" class="dropdown-item">Consultants</a>
+                <a href="#" class="dropdown-item">Advisors</a>
+                <a href="#" class="dropdown-item">Experts</a>
+                <a href="#" class="dropdown-item">Advertise with RealWorth</a>
+                <a href="#searchAgents" class="dropdown-item">Search</a>
+            </div>
+        </li>
 
-      <li class="nav-item  dropdown">
-        <a class="nav-link  dropdown-toggle" href="#search/sell" role="button" aria-haspopup="true" aria-expanded="false">
-          Sell
-        </a>
-        <div class="dropdown-menu">
-            <a href="#" class="dropdown-item">Sell a Business</a>
-            <a href="#" class="dropdown-item">Business Selling Guidance</a>
-        </div>
-      </li>
+<!--        <li class="nav-item dropdown">-->
+<!--        <a class="nav-link dropdown-toggle" href="#search/Buy" role="button" aria-haspopup="true" aria-expanded="false">-->
+<!--          Buy-->
+<!--        </a>-->
+<!--        <div class="dropdown-menu">-->
+<!--            <a href="#postBuy" class="dropdown-item">Post Buy Requirement</a>-->
+<!--            <a href="#search/Buy" class="dropdown-item">Buy a Business</a>-->
+<!--            <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>-->
+<!--        </div>-->
+<!--      </li>-->
+
+<!--      <li class="nav-item  dropdown">-->
+<!--        <a class="nav-link  dropdown-toggle" href="#search/sell" role="button" aria-haspopup="true" aria-expanded="false">-->
+<!--          Sell-->
+<!--        </a>-->
+<!--        <div class="dropdown-menu">-->
+<!--            <a href="#" class="dropdown-item">Sell a Business</a>-->
+<!--            <a href="#" class="dropdown-item">Business Selling Guidance</a>-->
+<!--        </div>-->
+<!--      </li>-->
       <!-- <li class="nav-item  dropdown">
         <a class="nav-link  dropdown-toggle" href="#search/Lease" role="button" aria-haspopup="true" aria-expanded="false">
           Lease
@@ -56,18 +107,14 @@
             <a href="#" class="dropdown-item">Business/Property Leasing Guidance</a>
         </div>
       </li> -->
-      <li class="nav-item  dropdown">
-        <a class="nav-link  dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">
-          Agent
-        </a>
-        <div class="dropdown-menu">
-            <a href="#searchAgents" class="dropdown-item">Search local Business Broker</a>
-            <!-- <a href="#" class="dropdown-item">Business Brokers</a>
-            <a href="#" class="dropdown-item">Real Estate agents</a>
-            <a href="#" class="dropdown-item">Agents Reviews</a>
-            <a href="#" class="dropdown-item">Agents Alerts</a> -->
-        </div>
-      </li>
+<!--      <li class="nav-item  dropdown">-->
+<!--        <a class="nav-link  dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">-->
+<!--          Agent-->
+<!--        </a>-->
+<!--        <div class="dropdown-menu">-->
+<!--            <a href="#searchAgents" class="dropdown-item">Search local Business Broker</a>-->
+<!--        </div>-->
+<!--      </li>-->
 <!--      <li class="nav-item  dropdown">-->
 <!--        <a class="nav-link  dropdown-toggle" href="#search" role="button" aria-haspopup="true" aria-expanded="false">-->
 <!--          Estimators-->
@@ -77,16 +124,16 @@
 <!--            <a href="#" class="dropdown-item">BRW ROI Estimator</a>-->
 <!--        </div>-->
 <!--      </li>-->
-			<div class="nav-item" ng-if="isAuthenticated">
-	      <a class="nav-link" href="#search" role="button" aria-haspopup="true" aria-expanded="false">
-	        Claim a Business
-	      </a>
-			</div>
-			<div class="nav-item" ng-if="!isAuthenticated">
-				<a class="nav-link" ng-click="authService.login()" role="button" aria-haspopup="true" aria-expanded="false">
-					Claim a Business
-				</a>
-			</div>
+<!--        <div class="nav-item" ng-if="isAuthenticated">-->
+<!--	      <a class="nav-link" href="#search" role="button" aria-haspopup="true" aria-expanded="false">-->
+<!--	        Claim a Business-->
+<!--	      </a>-->
+<!--        </div>-->
+<!--        <div class="nav-item" ng-if="!isAuthenticated">-->
+<!--            <a class="nav-link" ng-click="authService.login()" role="button" aria-haspopup="true" aria-expanded="false">-->
+<!--                Claim a Business-->
+<!--            </a>-->
+<!--        </div>-->
 
     </ul>
 
