Update on details page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -150,13 +150,13 @@
             <!-- <p class="text-muted">Copyright &copy; 2018<br /> -->
               <!-- All rights reserved</p> -->
           <!-- </div> -->
-          <div class="col-md-2 col-sm-4">
+          <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Company</h5>
             <ul class="list-unstyled">
               <li><a href="">About Us</a></li>
             </ul>
           </div>
-          <div class="col-md-2 col-sm-4">
+          <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Contact</h5>
             <ul class="list-unstyled">
               <li><a href="#">FAQs</a></li>
@@ -165,7 +165,7 @@
               <li><a href="#contactUs">Contact Us</a></li>
             </ul>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Connect</h5>
             <div class="social-sharebox">
                 <a href="#"><i class="fa fa-twitter"></i></a>
