Change search api attribute

--- a/src/main/resources/static/resources/pages/businessDetails.html
+++ b/src/main/resources/static/resources/pages/businessDetails.html
@@ -29,7 +29,7 @@
         <div class="col-md-12 col-lg-12 col-xl-12">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Property for sale</a></li>
+                <li class="breadcrumb-item"><a href="#search/Buy">Business for Sale</a></li>
                 <li class="breadcrumb-item active" aria-current="page">{{businessDetails.name}}</li>
             </ol>
             <div class="page-header bordered">
