--- a/src/main/resources/static/resources/pages/contactUs.html
+++ b/src/main/resources/static/resources/pages/contactUs.html
@@ -1,48 +1,69 @@
-<div class="page-header bordered">
-    <div class="col-md-12 col-lg-12 col-xl-12">
-        <h1>Contact Us
-            <small>Have a question, problem, or suggestion? We want to hear from you.</small>
-        </h1>
+<div ng-hide="contactUsData.emailSent">
+    <div class="page-header bordered" ng-hide="contactUsData.emailSent">
+        <div class="col-md-12 col-lg-12 col-xl-12">
+            <h1>Contact Us
+                <small>Have a question, problem, or suggestion? We want to hear from you.</small>
+            </h1>
+        </div>
     </div>
-  </div>
-  <form name="contactUs" ng-submit="submitted = true" novalidate>
-    <div class="alert-danger" ng-show="submitted && contactUs.$invalid">
-        <h2> Error, There are some problems with your input </h2>
-    </div>
-    <div class="col-md-12 col-lg-12 col-xl-12">
-              <!--Basic Details-->
-              <small>Fields marked with an * are required.</small>
-              <div class="form-group">
+    <form name="contactUs" ng-submit="submitted = true" novalidate>
+        <div class="alert-danger" ng-show="submitted && contactUs.$invalid">
+            <h2> Error, There are some problems with your input </h2>
+        </div>
+        <div class="col-md-12 col-lg-12 col-xl-12">
+            <!--Basic Details-->
+            <small>Fields marked with an * are required.</small>
+            <div class="form-group">
                 <label for="name">Name*</label>
                 <input type="text" class="form-control form-control-md" id="name" ng-model="contactUsData.name"
                        name="name" autofocus required>
                 <div class="errors" ng-show="submitted || contactUs.name.$touched">
                     <div style="color:red" ng-show="contactUs.name.$error.required">Name is required.</div>
                 </div>
-              </div>
-              <div class="form-group">
-                  <label>Email Address*</label>
-                  <input type="email" class="form-control form-control-md" name="emailAddress" ng-model="contactUsData.emailAddress"
-                         id="emailAddress" placeholder="" required>
-                  <div class="errors" ng-show="submitted || contactUs.emailAddress.$touched">
-                      <div style="color:red" ng-show="contactUs.emailAddress.$error.required">E-mail is required.</div>
-                      <div style="color:red" ng-show="contactUs.emailAddress.$error.email">Email is invalid.</div>
-                  </div>
-              </div>
-              <div>
-                  <div class="form-group">
-                      <label>Message*</label>
-                      <textarea class="form-control form-control-md text-editor" name="message" ng-model="contactUsData.message"
-                                id="message" placeholder="100 characters required" ng-minlength="100" required></textarea>
-                      <div class="errors" ng-show="submitted || contactUs.message.$touched">
-                          <div style="color:red" ng-show="contactUs.message.$error.required">Message is required.</div>
-                          <div style="color:red" ng-show="contactUs.message.$invalid">100 Characters required.</div>
-                      </div>
-                  </div>
-              </div>
-              <hr>
-              <div class="form-group">
-                <input type="submit" class="btn btn-lg btn-primary" ng-click="sendContactUsEmail(contactUs)" value="Submit"/>
-              </div>
+            </div>
+            <div class="form-group">
+                <label>Email Address*</label>
+                <input type="email" class="form-control form-control-md" name="email" ng-model="contactUsData.email"
+                       id="email" placeholder="" required>
+                <div class="errors" ng-show="submitted || contactUs.email.$touched">
+                    <div style="color:red" ng-show="contactUs.email.$error.required">E-mail is required.</div>
+                    <div style="color:red" ng-show="contactUs.email.$error.email">Email is invalid.</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Subject*</label>
+                <input type="text" class="form-control form-control-md" name="subject" ng-model="contactUsData.subject"
+                       id="subject" placeholder="" required>
+                <div class="errors" ng-show="submitted || contactUs.subject.$touched">
+                    <div style="color:red" ng-show="contactUs.subject.$error.required">Subject is required.</div>
+                </div>
+            </div>
+            <div>
+                <div class="form-group">
+                    <label>Message*</label>
+                    <textarea class="form-control form-control-md text-editor" name="message"
+                              ng-model="contactUsData.message"
+                              id="message" placeholder="100 characters required" ng-minlength="100" required></textarea>
+                    <div class="errors" ng-show="submitted || contactUs.message.$touched">
+                        <div style="color:red" ng-show="contactUs.message.$error.required">Message is required.</div>
+                        <div style="color:red" ng-show="contactUs.message.$invalid">100 Characters required.</div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="form-group">
+                <input type="submit" class="btn btn-lg btn-primary" ng-click="sendContactUsEmail(contactUs)"
+                       value="Submit"/>
+            </div>
+        </div>
+    </form>
+</div>
+<div class="page-header bordered" ng-show="contactUsData.emailSent">
+    <!--    <<div class="col-md-12 col-lg-12 col-xl-12">-->
+    <div class="error-template text-center"><i class="fa fa-check fa-5x text-success mb50 animated zoomIn"></i>
+        <h3 class="main-title centered"><span>Email Sent</span></h3>
+        <div class="main-title-description">Thank you for contacting us. We will get back to you in 3-5 business days.</div>
+        <div class="error-actions"><a href="#" class="btn btn-primary btn-lg">Continue </a></div>
     </div>
-  </form>
+    <!--    </div>-->
+</div>
