--- a/src/main/resources/static/resources/pages/myListing.html
+++ b/src/main/resources/static/resources/pages/myListing.html
@@ -5,12 +5,12 @@
               <div class="row item-listing grid">
                     <div ng-repeat="prop in myList.propertyList track by $index" class="item col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-6" id="prop{{index}}">
                         <div class="item-image">
-                            <a class="item-image" href="#property/editProperty/{{prop.id}}">
+                            <a class="item-image" href="#business/editProperty/{{prop.id}}">
                                 <img src="{{prop.imageUrl}}" style="width:400px;height:240px" class="img-fluid" alt="">
                                 <a href="#" class="save-item"><i class="fa fa-star"></i></a>
                             </a>
 
-                            <a href="#property/editProperty/{{prop.id}}" class="item-meta">
+                            <a href="#business/editProperty/{{prop.id}}" class="item-meta">
                                 <span class="item-badge-left item-address">For Sale{{prop.propertyAvailableFor}}</span>
                                 <span class="item-badge-right item-address">{{prop.businessType}}</span>
                                 <br/>
