Change message and remove bearer

--- a/src/main/resources/static/resources/pages/addListingForm.html
+++ b/src/main/resources/static/resources/pages/addListingForm.html
@@ -518,7 +518,7 @@
         <!--Contact Information-->
         <h3 class="subheadline">Contact Information</h3>
         <p style="">
-            Potential buyers will contact you through the email address you use to register on Zillow.
+            Potential buyers will contact you through the email address you use to register on BizRealWorth.
             <br/>
             OR You can add other email address. You must also add your phone number to the listing here.
         </p>
