--- a/src/main/resources/static/resources/pages/confirmation.html
+++ b/src/main/resources/static/resources/pages/confirmation.html
@@ -5,8 +5,8 @@
     <div class="row justify-content-md-center">
       <div class="col col-lg-8">
         <div class="error-template text-center"> <i class="fa fa-check fa-5x text-success mb50 animated zoomIn"></i>
-          <h3 class="main-title centered"><span>New Listing added</span></h3>
-          <div class="main-title-description"> This could be a success or a confirmation page </div>
+          <h3 class="main-title centered"><span>New Listing added to your profile.</span></h3>
+          <div class="main-title-description"> We will verify this listing and get back to you in 3-5 business days. </div>
           <div class="error-actions"><a href="#" class="btn btn-primary btn-lg">Continue </a> </div>
         </div>
       </div>
